--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,23 @@
 
 buildscript {
     repositories {
-        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        google()
+//        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
     }
 }
 
 allprojects {
     repositories {
-        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        google()
+//        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         jcenter()
+        mavenCentral()
     }
 }
 
