--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,9 @@ dependencies {
     annotationProcessor  'com.google.dagger:dagger-compiler:2.13'
 
     provided 'org.glassfish:javax.annotation:10.0-b28'
+    // ButterKnife
     compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     // Rx
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.6'
